src/objects/Operation__c.object
<CustomObject>
    <description>AMP Operations Custom Object</description>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Interest_Amount__c</fullName>
        <label>Actual Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Number_of_Repayments__c</fullName>
        <label>Actual Number of Repayments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Principal_Amount__c</fullName>
        <label>Actual Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Repayment_Per_Installment__c</fullName>
        <label>Actual Repayment Per Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_VAT_Amount__c</fullName>
        <label>Actual VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Narrative__c</fullName>
        <label>Additional Information Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advanced_Notification_Sent_Date__c</fullName>
        <label>Advanced Notification Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advanced_Notification_Sent_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Notification Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Documentation__c</fullName>
        <formula>HYPERLINK(
 IF( 
CONTAINS($Api.Enterprise_Server_URL_260, &quot;cs81&quot;), 
&quot;https://advancedpay.sharepoint.com/sites/ampdev/&quot;, 
IF( 
CONTAINS($Api.Enterprise_Server_URL_260, &quot;cs80&quot;), 
&quot;https://advancedpay.sharepoint.com/sites/QA/&quot;, 
&quot;https://sharepoint.amp-creditech.com/sites/clientdocs/&quot; 
) 
)+Country__c+&quot;/Forms/AllItems.aspx?RootFolder=%2Fsites%2Fampdev%2F&quot;+Country__c+&quot;%2F&quot; + 
 SUBSTITUTE(
    SUBSTITUTE(
     SUBSTITUTE(
      SUBSTITUTE(
       SUBSTITUTE(
        SUBSTITUTE(
         SUBSTITUTE(
          SUBSTITUTE(
           SUBSTITUTE(
            SUBSTITUTE(
             SUBSTITUTE(
              SUBSTITUTE(
               SUBSTITUTE(
                SUBSTITUTE(
                 SUBSTITUTE(Opportunity__r.Account.Name, &quot;&amp;&quot;, &quot;-&quot;)
                , &quot;/&quot;, &quot;-&quot;)
               , &quot;\\&quot;, &quot;-&quot;)
              , &quot;{&quot;, &quot;-&quot;)
             , &quot;|&quot;, &quot;-&quot;)
            , &quot;}&quot;, &quot;-&quot;)
         , &quot;~&quot;, &quot;-&quot;)
        , &quot;\&quot;&quot;, &quot;-&quot;)
       , &quot;#&quot;, &quot;-&quot;)
      , &quot;%&quot;, &quot;-&quot;)
     , &quot;*&quot;, &quot;-&quot;)
    , &quot;:&quot;, &quot;-&quot;)
   , &quot;&lt;&quot;, &quot;-&quot;)
  , &quot;&gt;&quot;, &quot;-&quot;)
 , &quot;?&quot;, &quot;-&quot;) +  
&quot;_&quot; + 
Opportunity__r.Account.Client_ID__c + 
&quot;%2F&quot; + 
text(year( DATEVALUE(Opportunity__r.CreatedDate ) )) + 
 LPAD(TEXT( MONTH(  DATEVALUE(Opportunity__r.CreatedDate ) ) ), 2, &quot;0&quot;) +
 LPAD(TEXT( DAY(  DATEVALUE(Opportunity__r.CreatedDate ) ) ), 2, &quot;0&quot;) + 
&quot;_&quot; + 
Opportunity__r.Application_ID2__c, 
&apos;Click Here&apos;, 
&apos;_blank&apos; 
)</formula>
        <label>Application Documentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <formula>Opportunity__r.Application_ID2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Received_Date__c</fullName>
        <label>Contract Signed Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_and_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed and Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(contains(RecordType.DeveloperName,&apos;UK&apos;),&apos;UK&apos;, 
IF(contains(RecordType.DeveloperName,&apos;Hong&apos;),&apos;HK&apos;, 
IF(contains(RecordType.DeveloperName,&apos;Singapore&apos;),&apos;SG&apos;,&apos;PP&apos;)))</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDI_Batch_File_Date__c</fullName>
        <label>DDI Batch File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDM_Batch_File_Date__c</fullName>
        <label>DDM Batch File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Mandate_Acceptance_Date__c</fullName>
        <label>DD Mandate Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Mandate_Acceptance_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD Mandate Acceptance Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Reference_number__c</fullName>
        <label>DD Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Calculation__c</fullName>
        <formula>CASE(
MOD(Contract_Signed_Received_Date__c - DATE(1900, 1, 7), 7),
0, (Contract_Signed_Received_Date__c) + 9 + FLOOR((9-1)/5)*2,
1, (Contract_Signed_Received_Date__c) + 9 + FLOOR((9)/5)*2,
2, (Contract_Signed_Received_Date__c) + 9 + FLOOR((9+1)/5)*2,
3, (Contract_Signed_Received_Date__c) + 9 + FLOOR((9+2)/5)*2,
4, (Contract_Signed_Received_Date__c) + 9 + FLOOR((9+3)/5)*2,
5, (Contract_Signed_Received_Date__c) + 9 + CEILING((9)/5)*2,
6, (Contract_Signed_Received_Date__c) - IF(9&gt;0,1,0) + 9+ CEILING((9)/5)*2,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Calculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Final_Collection__c</fullName>
        <label>Date of Final Collection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week_to_be_Debited__c</fullName>
        <label>Day of the Week to be Debited</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisbursalApproveEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisbursalApproveEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursal_Additional_Info_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disbursal Additional Info Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursal_Approval_Date_ReadOnly__c</fullName>
        <formula>Disbursal_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursal_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursal_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disbursal Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursal_Approved_By_Name__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursal_Approved_By__c</fullName>
        <formula>if( Disbursal_Approve__c == True ,  $User.FirstName + &quot; &quot; +$User.LastName   , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursal_More_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disbursal More Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursal_Reject_Reason__c</fullName>
        <label>Rejected Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disbursal_Status_Message__c</fullName>
        <label>Disbursal Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disbursal_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Amount_to_be_Debited__c</fullName>
        <label>Final Amount to be Debited</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Collection_Date__c</fullName>
        <label>Final Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Date_ReadOnly__c</fullName>
        <formula>Final_Decision_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Date__c</fullName>
        <label>Final Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Decision__c</fullName>
        <label>Final Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Disburse_Decision__c</fullName>
        <formula>TEXT(Final_Decision__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Repayment_Date__c</fullName>
        <label>Final Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Repayment_Date__c</fullName>
        <label>Repayment Begins On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_for_DDI_Batch_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for DDI Batch File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_DDM_Batch_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for DDM Batch File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Collection__c</fullName>
        <label>Frequency of Collection</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generate_Advanced_Notification_Date__c</fullName>
        <label>Generate Advanced Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_Advanced_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Advanced Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Welcome_Pack_Date__c</fullName>
        <label>Generate Welcome Pack Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_Welcome_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Welcome Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Daily_Repayment__c</fullName>
        <label>Interest Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Disbursed_Date__c</fullName>
        <label>To Be Disbursed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Disbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Disbursed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <label>Loan Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Outstanding_Interest__c</fullName>
        <label>Loan Outstanding Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Outstanding_Principal__c</fullName>
        <label>Loan Outstanding Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Outstanding_VAT_Amount__c</fullName>
        <label>Loan Outstanding VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (360 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName == &apos;Operation_UK&apos;,  $Setup.IR__c.Annual_UK__c , $Setup.IR__c.Annual__c)</defaultValue>
        <label>Annual Interest</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Bounce_Backs__c</fullName>
        <label># Bounce Backs</label>
        <summaryFilterItems>
            <field>Loan_Management_Event__c.Event_Type__c</field>
            <operation>equals</operation>
            <value>Bounce Back</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Management_Event__c.Operation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Payment_Holidays__c</fullName>
        <label># Payment Holidays</label>
        <summaryFilterItems>
            <field>Loan_Management_Event__c.Event_Type__c</field>
            <operation>equals</operation>
            <value>Payment Holiday</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Management_Event__c.Operation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>VALUE(MID(TEXT(Loan_Term__c),5,3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Payment_Holidays__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Payment Holidays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Repayments__c</fullName>
        <label>Number of Repayments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgBaseURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_350, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_350)+3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgBaseURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Fees_VAT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding Fees VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Principal__c</fullName>
        <label>Outstanding Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principal_Daily_Repayments__c</fullName>
        <label>Principal Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO_Name__c</fullName>
        <formula>Program_Product_ASO__r.Association_Name__c</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSM_Reference__c</fullName>
        <label>RSM Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raise_New_Case__c</fullName>
        <label>Raise New Case</label>
        <picklist>
            <picklistValues>
                <fullName>Change of Contact Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Status of Loan Over Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Status of Loan to be Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadyForFinanceEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadyForFinanceEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Finance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Finance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Number_of_Repayments__c</fullName>
        <label>Remaining Number of Repayments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Begins_On__c</fullName>
        <formula>First_Repayment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repayment Begins On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_Per_Installment__c</fullName>
        <label>Repayment Per Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayments_Made__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Repayments Made</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaulted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaulted(Written-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restructured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topped-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Be_Disbursed_On__c</fullName>
        <formula>IF(ISNULL(Loan_Disbursed_Date__c), TODAY(), Loan_Disbursed_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Be Disbursed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Repayable__c</fullName>
        <label>Total Amount Repayable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Daily_Repayment__c</fullName>
        <label>Total Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Loan_Outstanding_Principal__c  +  Loan_Outstanding_Interest__c  +  Outstanding_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Repayment__c</fullName>
        <label>VAT Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Welcome_Pack_Sent_Date__c</fullName>
        <label>Welcome Pack Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Pack_Sent_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Pack Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>days__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Operation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Monthly_Interest__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Group</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Operations</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Monthly_Interest__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Operations</label>
    </listViews>
    <listViews>
        <fullName>Operations_Pre_disbursed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Program_Product_ASO__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pre-Disbursement</value>
        </filters>
        <label>Pre-disbursed</label>
    </listViews>
    <listViews>
        <fullName>Operations_Team_Hong_Kong_Operation</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Monthly_Interest__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Operations Team (Hong Kong)</label>
        <queue>Operations_Team_Hong_Kong</queue>
        <sharedTo>
            <role>Hong_Kong</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Operations_Team_Philippines_Operation</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Monthly_Interest__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Operations Team (Philippines)</label>
        <queue>Operations_Team_Philippines</queue>
        <sharedTo>
            <role>Philippines</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Operations_Team_Singapore_Operation</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Monthly_Interest__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Operations Team (Singapore)</label>
        <queue>Operations_Team_Singapore</queue>
        <sharedTo>
            <role>Singapore</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Operations_Team_UK_Operation</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Term__c</columns>
        <columns>Monthly_Interest__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country__c</columns>
        <filterScope>Queue</filterScope>
        <label>Operations Team (UK)</label>
        <queue>Operations_Team_UK</queue>
        <sharedTo>
            <role>UK</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Operations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <recordTypes>
        <fullName>Operation_HK_Disbursal_Approved</fullName>
        <active>true</active>
        <description>Disbursal Approved Record Type for Hong Kong</description>
        <label>Operation HK Disbursal Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_HK_Disbursal_Rejected</fullName>
        <active>true</active>
        <description>Disbursal Reject Record Type for Hong Kong</description>
        <label>Operation HK Disbursal Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_Hong_Kong</fullName>
        <active>true</active>
        <description>Record Type for Hong Kong</description>
        <label>Operation Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_PP_Disbursal_Approved</fullName>
        <active>true</active>
        <description>Disbursal Approved Record Type for Philippines</description>
        <label>Operation PP Disbursal Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_PP_Disbursal_Rejected</fullName>
        <active>true</active>
        <description>Disbursal Rejected Record Type for Philippines</description>
        <label>Operation PP Disbursal Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_Philippines</fullName>
        <active>true</active>
        <description>Record Type for Philippines</description>
        <label>Operation Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_SG_Disbursal_Approved</fullName>
        <active>true</active>
        <description>Disbursal Approved Record Type for Singapore</description>
        <label>Operation SG Disbursal Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_SG_Disbursal_Rejected</fullName>
        <active>true</active>
        <description>Disbursal Rejected Record Type for Singapore</description>
        <label>Operation SG Disbursal Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_Singapore</fullName>
        <active>true</active>
        <description>Record Type for Singapore</description>
        <label>Operation Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_UK</fullName>
        <active>true</active>
        <description>Record Type for UK</description>
        <label>Operation UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_UK_Disbursal_Approved</fullName>
        <active>true</active>
        <description>Disbursal Approved Record Type for UK</description>
        <label>Operation UK Disbursal Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operation_UK_Disbursal_Rejected</fullName>
        <active>true</active>
        <description>Disbursal Rejected Record Type for UK</description>
        <label>Operation UK Disbursal Rejected</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Reject_Reason_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Final_Decision__c, &quot;Rejected&quot;), ISBLANK(Disbursal_Reject_Reason__c))</errorConditionFormula>
        <errorMessage>Reject Reason cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Approval_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Final_Decision__c, &quot;Approved&quot;), ISNULL(Disbursal_Approval_Date__c))</errorConditionFormula>
        <errorMessage>Approval Date should not be null</errorMessage>
    </validationRules>
</CustomObject>